Added validation to grammar and changed uses of string to char

--- a/CNFSimulator/CNFSimulator.csproj
+++ b/CNFSimulator/CNFSimulator.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Input2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Input.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
